# symbiote-lite-analyst-agent

./: .gitignore  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  environment.yml  pyproject.toml
data/: taxi.db  taxi_trips.sqlite  yellow_tripdata_sample.csv
notebooks/: 01_explore_bigquery.ipynb  02_eda.ipynb
scripts/: analysis.py  create_sample_db.py  gradio_app.py  mcp_client_example.py  mcp_server.py  run_agent.py  symbiote_lite_agent.py  test_mcp_integration.py
scripts/Other/: bq_tool.py  create_sqlite_db.py  symbiote_lite_agent.py
sql/: base_queries.sql
symbiote_lite/: __init__.py  agent.py  agent_adapter.py  agent_core.py  dates.py  explain.py  router.py  slots.py
symbiote_lite/sql/: __init__.py  builder.py  executor.py  safety.py
symbiote_lite/tools/: __init__.py  agent_adapter.py  executor.py
tests/: __init__.py  conftest.py  test_agent_smoke.py  test_bq_tool.py  test_dates.py  test_db_execution.py  test_explain.py  test_mcp.py  test_nlp_slots.py  test_router.py  test_slots.py  test_sql.py  test_sql_builder.py  test_sql_executor.py  test_sql_safety.py  test_validation.py
